:hammer: Use a `denoify` script to fix errors

--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
   "scripts": {
     "build": "bun run build.node && bun run build.deno",
     "build.node": "bun run clear.node && tsc --build && bun scripts/build.ts",
-    "build.deno": "bun run clear.deno && bun run denoify",
+    "build.deno": "bun run clear.deno && denoify --out jsr && bun scripts/denoify.ts",
     "check": "biome ci . && knip",
     "check.format": "biome format .",
     "check.lint": "biome check .",
     "clear": "bun run clear.node && bun run clear.deno",
     "clear.node": "rimraf js && rimraf ts",
     "clear.deno": "rimraf jsr/*",
-    "denoify": "denoify --out jsr",
+    "denoify": "denoify",
     "debug": "bun check && bun test",
     "fix": "bun run unsed && bun lint && bun format",
     "format": "biome format --write .",
