:package: Export modules

--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,43 @@
   "name": "@siguici/buno",
   "version": "0.0.0",
   "exports": {
-    ".": "./jsr/index.ts"
+    ".": "./jsr/index.ts",
+    "./assert": "./jsr/assert.ts",
+    "./async_hooks": "./jsr/async_hooks.ts",
+    "./buffer": "./jsr/buffer.ts",
+    "./child_process": "./jsr/child_process.ts",
+    "./console": "./jsr/console.ts",
+    "./crypto": "./jsr/crypto.ts",
+    "./dgram": "./jsr/dgram.ts",
+    "./diagnostics_channel": "./jsr/diagnostics_channel.ts",
+    "./dns": "./jsr/dns.ts",
+    "./events": "./jsr/events.ts",
+    "./fs": "./jsr/fs.ts",
+    "./http": "./jsr/http.ts",
+    "./http2": "./jsr/http2.ts",
+    "./https": "./jsr/https.ts",
+    "./module": "./jsr/module.ts",
+    "./net": "./jsr/net.ts",
+    "./os": "./jsr/os.ts",
+    "./path": "./jsr/path.ts",
+    "./perf_hooks": "./jsr/perf_hooks.ts",
+    "./process": "./jsr/process.ts",
+    "./punycode": "./jsr/punycode.ts",
+    "./querystring": "./jsr/querystring.ts",
+    "./readline": "./jsr/readline.ts",
+    "./stream": "./jsr/stream.ts",
+    "./string_decoder": "./jsr/string_decoder.ts",
+    "./timers": "./jsr/timers.ts",
+    "./tls": "./jsr/tls.ts",
+    "./tty": "./jsr/tty.ts",
+    "./url": "./jsr/url.ts",
+    "./util": "./jsr/util.ts",
+    "./vm": "./jsr/vm.ts",
+    "./worker_threads": "./jsr/worker_threads.ts",
+    "./zlib": "./jsr/zlib.ts",
+    "./deno.json": "./deno.json",
+    "./package.json": "./package.json",
+    "./tsconfig.json": "./tsconfig.json"
   },
   "include": ["deno.json", "jsr/*.ts", "README.md", "LICENSE.md"],
   "exclude": [
