--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,12 +3,12 @@ name: CD
 on:
   push:
     branches:
-      - main
+      - trunk
 
   workflow_run:
     workflows: [CI]
     types: [completed]
-    branches: [main]
+    branches: [trunk]
 
 jobs:
   deploy:
