:green_heart: Fix side effets

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buno.js",
   "version": "0.1.0",
   "private": false,
-  "sideEffects": false,
+  "sideEffects": true,
   "type": "module",
   "license": "MIT",
   "engines": {
