--- a/package.json
+++ b/package.json
@@ -36,17 +36,19 @@
   "module": "./js/index.js",
   "main": "./js/index.js",
   "types": "./ts/",
-  "files": ["js/**/*", "ts/**/*"],
+  "files": ["js/**/*", "ts/**/*", "jsr/**/*"],
   "exports": {
     ".": {
       "bun": "./ts/index.ts",
+      "deno": "./jsr/index.ts",
       "types": "./ts/index.d.ts",
       "default": "./js/index.js",
       "import": "./js/index.mjs",
       "require": "./js/index.cjs"
     },
     "./polyfill": {
-      "bun": "./ts/polyfill.d.ts",
+      "bun": "./ts/polyfill.ts",
+      "deno": "./jsr/polyfill.ts",
       "types": "./ts/polyfill.d.ts",
       "default": "./js/polyfill.js",
       "import": "./js/polyfill.mjs",
@@ -54,6 +56,7 @@
     },
     "./assert": {
       "bun": "./ts/assert.ts",
+      "deno": "./jsr/assert.ts",
       "types": "./ts/assert.d.ts",
       "default": "./js/assert.js",
       "import": "./js/assert.mjs",
@@ -61,6 +64,7 @@
     },
     "./async_hooks": {
       "bun": "./ts/async_hooks.ts",
+      "deno": "./jsr/async_hooks.ts",
       "types": "./ts/async_hooks.d.ts",
       "default": "./js/async_hooks.js",
       "import": "./js/async_hooks.mjs",
@@ -68,6 +72,7 @@
     },
     "./buffer": {
       "bun": "./ts/buffer.ts",
+      "deno": "./jsr/buffer.ts",
       "types": "./ts/buffer.d.ts",
       "default": "./js/buffer.js",
       "import": "./js/buffer.mjs",
@@ -75,6 +80,7 @@
     },
     "./child_process": {
       "bun": "./ts/child_process.ts",
+      "deno": "./jsr/child_process.ts",
       "types": "./ts/child_process.d.ts",
       "default": "./js/child_process.js",
       "import": "./js/child_process.mjs",
@@ -82,6 +88,7 @@
     },
     "./console": {
       "bun": "./ts/console.ts",
+      "deno": "./jsr/console.ts",
       "types": "./ts/console.d.ts",
       "default": "./js/console.js",
       "import": "./js/console.mjs",
@@ -89,6 +96,7 @@
     },
     "./crypto": {
       "bun": "./ts/crypto.ts",
+      "deno": "./jsr/crypto.ts",
       "types": "./ts/crypto.d.ts",
       "default": "./js/crypto.js",
       "import": "./js/crypto.mjs",
@@ -96,6 +104,7 @@
     },
     "./dgram": {
       "bun": "./ts/dgram.ts",
+      "deno": "./jsr/dgram.ts",
       "types": "./ts/dgram.d.ts",
       "default": "./js/dgram.js",
       "import": "./js/dgram.mjs",
@@ -103,6 +112,7 @@
     },
     "./diagnostics_channel": {
       "bun": "./ts/diagnostics_channel.ts",
+      "deno": "./jsr/diagnostics_channel.ts",
       "types": "./ts/diagnostics_channel.d.ts",
       "default": "./js/diagnostics_channel.js",
       "import": "./js/diagnostics_channel.mjs",
@@ -110,6 +120,7 @@
     },
     "./dns": {
       "bun": "./ts/dns.ts",
+      "deno": "./jsr/dns.ts",
       "types": "./ts/dns.d.ts",
       "default": "./js/dns.js",
       "import": "./js/dns.mjs",
@@ -117,6 +128,7 @@
     },
     "./events": {
       "bun": "./ts/events.ts",
+      "deno": "./jsr/events.ts",
       "types": "./ts/events.d.ts",
       "default": "./js/events.js",
       "import": "./js/events.mjs",
@@ -124,6 +136,7 @@
     },
     "./fs": {
       "bun": "./ts/fs.ts",
+      "deno": "./jsr/fs.ts",
       "types": "./ts/fs.d.ts",
       "default": "./js/fs.js",
       "import": "./js/fs.mjs",
@@ -131,6 +144,7 @@
     },
     "./http": {
       "bun": "./ts/http.ts",
+      "deno": "./jsr/http.ts",
       "types": "./ts/http.d.ts",
       "default": "./js/http.js",
       "import": "./js/http.mjs",
@@ -138,6 +152,7 @@
     },
     "./http2": {
       "bun": "./ts/http2.ts",
+      "deno": "./jsr/http2.ts",
       "types": "./ts/http2.d.ts",
       "default": "./js/http2.js",
       "import": "./js/http2.mjs",
@@ -145,6 +160,7 @@
     },
     "./https": {
       "bun": "./ts/https.ts",
+      "deno": "./jsr/https.ts",
       "types": "./ts/https.d.ts",
       "default": "./js/https.js",
       "import": "./js/https.mjs",
@@ -152,6 +168,7 @@
     },
     "./module": {
       "bun": "./ts/module.ts",
+      "deno": "./jsr/module.ts",
       "types": "./ts/module.d.ts",
       "default": "./js/module.js",
       "import": "./js/module.mjs",
@@ -159,6 +176,7 @@
     },
     "./net": {
       "bun": "./ts/net.ts",
+      "deno": "./jsr/net.ts",
       "types": "./ts/net.d.ts",
       "default": "./js/net.js",
       "import": "./js/net.mjs",
@@ -166,6 +184,7 @@
     },
     "./os": {
       "bun": "./ts/os.ts",
+      "deno": "./jsr/os.ts",
       "types": "./ts/os.d.ts",
       "default": "./js/os.js",
       "import": "./js/os.mjs",
@@ -173,6 +192,7 @@
     },
     "./path": {
       "bun": "./ts/path.ts",
+      "deno": "./jsr/path.ts",
       "types": "./ts/path.d.ts",
       "default": "./js/path.js",
       "import": "./js/path.mjs",
@@ -180,6 +200,7 @@
     },
     "./perf_hooks": {
       "bun": "./ts/perf_hooks.ts",
+      "deno": "./jsr/perf_hooks.ts",
       "types": "./ts/perf_hooks.d.ts",
       "default": "./js/perf_hooks.js",
       "import": "./js/perf_hooks.mjs",
@@ -187,6 +208,7 @@
     },
     "./process": {
       "bun": "./ts/process.ts",
+      "deno": "./jsr/process.ts",
       "types": "./ts/process.d.ts",
       "default": "./js/process.js",
       "import": "./js/process.mjs",
@@ -194,6 +216,7 @@
     },
     "./punycode": {
       "bun": "./ts/punycode.ts",
+      "deno": "./jsr/punycode.ts",
       "types": "./ts/punycode.d.ts",
       "default": "./js/punycode.js",
       "import": "./js/punycode.mjs",
@@ -201,6 +224,7 @@
     },
     "./querystring": {
       "bun": "./ts/querystring.ts",
+      "deno": "./jsr/querystring.ts",
       "types": "./ts/querystring.d.ts",
       "default": "./js/querystring.js",
       "import": "./js/querystring.mjs",
@@ -208,6 +232,7 @@
     },
     "./readline": {
       "bun": "./ts/readline.ts",
+      "deno": "./jsr/readline.ts",
       "types": "./ts/readline.d.ts",
       "default": "./js/readline.js",
       "import": "./js/readline.mjs",
@@ -215,6 +240,7 @@
     },
     "./stream": {
       "bun": "./ts/stream.ts",
+      "deno": "./jsr/stream.ts",
       "types": "./ts/stream.d.ts",
       "default": "./js/stream.js",
       "import": "./js/stream.mjs",
@@ -222,6 +248,7 @@
     },
     "./string_decoder": {
       "bun": "./ts/string_decoder.ts",
+      "deno": "./jsr/string_decoder.ts",
       "types": "./ts/string_decoder.d.ts",
       "default": "./js/string_decoder.js",
       "import": "./js/string_decoder.mjs",
@@ -229,6 +256,7 @@
     },
     "./timers": {
       "bun": "./ts/timers.ts",
+      "deno": "./jsr/timers.ts",
       "types": "./ts/timers.d.ts",
       "default": "./js/timers.js",
       "import": "./js/timers.mjs",
@@ -236,6 +264,7 @@
     },
     "./tls": {
       "bun": "./ts/tls.ts",
+      "deno": "./jsr/tls.ts",
       "types": "./ts/tls.d.ts",
       "default": "./js/tls.js",
       "import": "./js/tls.mjs",
@@ -243,6 +272,7 @@
     },
     "./tty": {
       "bun": "./ts/tty.ts",
+      "deno": "./jsr/tty.ts",
       "types": "./ts/tty.d.ts",
       "default": "./js/tty.js",
       "import": "./js/tty.mjs",
@@ -250,6 +280,7 @@
     },
     "./url": {
       "bun": "./ts/url.ts",
+      "deno": "./jsr/url.ts",
       "types": "./ts/url.d.ts",
       "default": "./js/url.js",
       "import": "./js/url.mjs",
@@ -257,6 +288,7 @@
     },
     "./util": {
       "bun": "./ts/util.ts",
+      "deno": "./jsr/util.ts",
       "types": "./ts/util.d.ts",
       "default": "./js/util.js",
       "import": "./js/util.mjs",
@@ -264,6 +296,7 @@
     },
     "./vm": {
       "bun": "./ts/vm.ts",
+      "deno": "./jsr/vm.ts",
       "types": "./ts/vm.d.ts",
       "default": "./js/vm.js",
       "import": "./js/vm.mjs",
@@ -271,6 +304,7 @@
     },
     "./worker_threads": {
       "bun": "./ts/worker_threads.ts",
+      "deno": "./jsr/worker_threads.ts",
       "types": "./ts/worker_threads.d.ts",
       "default": "./js/worker_threads.js",
       "import": "./js/worker_threads.mjs",
@@ -278,6 +312,7 @@
     },
     "./zlib": {
       "bun": "./ts/zlib.ts",
+      "deno": "./jsr/zlib.ts",
       "types": "./ts/zlib.d.ts",
       "default": "./js/zlib.js",
       "import": "./js/zlib.mjs",
