--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
 
-      - name: 📦️ Download Deno distribution files
+      - name: 📂 Download Deno distribution files
         uses: actions/download-artifact@v4
         with:
           name: deno_dist
@@ -47,8 +47,11 @@ jobs:
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📂 List distribution files
-        run: ls -la jsr
+      - name: 📦️ Build NPM package
+        run: deno task build
+
+      - name: 🗃️ List distribution files
+        run: ls -la jsr npm
 
       - name: 🚨 Fix code style
         run: deno task fix
