--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "exports": {
     ".": {
       "bun": "./ts/index.ts",
-      "deno": "./jsr/index.ts",
+      "deno": "./npm/index.js",
       "types": "./ts/index.d.ts",
       "default": "./js/index.js",
       "import": "./js/index.mjs",
@@ -48,7 +48,7 @@
     },
     "./polyfill": {
       "bun": "./ts/polyfill.ts",
-      "deno": "./jsr/polyfill.ts",
+      "deno": "./npm/polyfill.js",
       "types": "./ts/polyfill.d.ts",
       "default": "./js/polyfill.js",
       "import": "./js/polyfill.mjs",
@@ -56,7 +56,7 @@
     },
     "./assert": {
       "bun": "./ts/assert.ts",
-      "deno": "./jsr/assert.ts",
+      "deno": "./npm/assert.js",
       "types": "./ts/assert.d.ts",
       "default": "./js/assert.js",
       "import": "./js/assert.mjs",
@@ -64,7 +64,7 @@
     },
     "./async_hooks": {
       "bun": "./ts/async_hooks.ts",
-      "deno": "./jsr/async_hooks.ts",
+      "deno": "./npm/async_hooks.js",
       "types": "./ts/async_hooks.d.ts",
       "default": "./js/async_hooks.js",
       "import": "./js/async_hooks.mjs",
@@ -72,7 +72,7 @@
     },
     "./buffer": {
       "bun": "./ts/buffer.ts",
-      "deno": "./jsr/buffer.ts",
+      "deno": "./npm/buffer.js",
       "types": "./ts/buffer.d.ts",
       "default": "./js/buffer.js",
       "import": "./js/buffer.mjs",
@@ -80,7 +80,7 @@
     },
     "./child_process": {
       "bun": "./ts/child_process.ts",
-      "deno": "./jsr/child_process.ts",
+      "deno": "./npm/child_process.js",
       "types": "./ts/child_process.d.ts",
       "default": "./js/child_process.js",
       "import": "./js/child_process.mjs",
@@ -88,7 +88,7 @@
     },
     "./console": {
       "bun": "./ts/console.ts",
-      "deno": "./jsr/console.ts",
+      "deno": "./npm/console.js",
       "types": "./ts/console.d.ts",
       "default": "./js/console.js",
       "import": "./js/console.mjs",
@@ -96,7 +96,7 @@
     },
     "./crypto": {
       "bun": "./ts/crypto.ts",
-      "deno": "./jsr/crypto.ts",
+      "deno": "./npm/crypto.js",
       "types": "./ts/crypto.d.ts",
       "default": "./js/crypto.js",
       "import": "./js/crypto.mjs",
@@ -104,7 +104,7 @@
     },
     "./dgram": {
       "bun": "./ts/dgram.ts",
-      "deno": "./jsr/dgram.ts",
+      "deno": "./npm/dgram.js",
       "types": "./ts/dgram.d.ts",
       "default": "./js/dgram.js",
       "import": "./js/dgram.mjs",
@@ -112,7 +112,7 @@
     },
     "./diagnostics_channel": {
       "bun": "./ts/diagnostics_channel.ts",
-      "deno": "./jsr/diagnostics_channel.ts",
+      "deno": "./npm/diagnostics_channel.js",
       "types": "./ts/diagnostics_channel.d.ts",
       "default": "./js/diagnostics_channel.js",
       "import": "./js/diagnostics_channel.mjs",
@@ -120,7 +120,7 @@
     },
     "./dns": {
       "bun": "./ts/dns.ts",
-      "deno": "./jsr/dns.ts",
+      "deno": "./npm/dns.js",
       "types": "./ts/dns.d.ts",
       "default": "./js/dns.js",
       "import": "./js/dns.mjs",
@@ -128,7 +128,7 @@
     },
     "./events": {
       "bun": "./ts/events.ts",
-      "deno": "./jsr/events.ts",
+      "deno": "./npm/events.js",
       "types": "./ts/events.d.ts",
       "default": "./js/events.js",
       "import": "./js/events.mjs",
@@ -136,7 +136,7 @@
     },
     "./fs": {
       "bun": "./ts/fs.ts",
-      "deno": "./jsr/fs.ts",
+      "deno": "./npm/fs.js",
       "types": "./ts/fs.d.ts",
       "default": "./js/fs.js",
       "import": "./js/fs.mjs",
@@ -144,7 +144,7 @@
     },
     "./http": {
       "bun": "./ts/http.ts",
-      "deno": "./jsr/http.ts",
+      "deno": "./npm/http.js",
       "types": "./ts/http.d.ts",
       "default": "./js/http.js",
       "import": "./js/http.mjs",
@@ -152,7 +152,7 @@
     },
     "./http2": {
       "bun": "./ts/http2.ts",
-      "deno": "./jsr/http2.ts",
+      "deno": "./npm/http2.js",
       "types": "./ts/http2.d.ts",
       "default": "./js/http2.js",
       "import": "./js/http2.mjs",
@@ -160,7 +160,7 @@
     },
     "./https": {
       "bun": "./ts/https.ts",
-      "deno": "./jsr/https.ts",
+      "deno": "./npm/https.js",
       "types": "./ts/https.d.ts",
       "default": "./js/https.js",
       "import": "./js/https.mjs",
@@ -168,7 +168,7 @@
     },
     "./module": {
       "bun": "./ts/module.ts",
-      "deno": "./jsr/module.ts",
+      "deno": "./npm/module.js",
       "types": "./ts/module.d.ts",
       "default": "./js/module.js",
       "import": "./js/module.mjs",
@@ -176,7 +176,7 @@
     },
     "./net": {
       "bun": "./ts/net.ts",
-      "deno": "./jsr/net.ts",
+      "deno": "./npm/net.js",
       "types": "./ts/net.d.ts",
       "default": "./js/net.js",
       "import": "./js/net.mjs",
@@ -184,7 +184,7 @@
     },
     "./os": {
       "bun": "./ts/os.ts",
-      "deno": "./jsr/os.ts",
+      "deno": "./npm/os.js",
       "types": "./ts/os.d.ts",
       "default": "./js/os.js",
       "import": "./js/os.mjs",
@@ -192,7 +192,7 @@
     },
     "./path": {
       "bun": "./ts/path.ts",
-      "deno": "./jsr/path.ts",
+      "deno": "./npm/path.js",
       "types": "./ts/path.d.ts",
       "default": "./js/path.js",
       "import": "./js/path.mjs",
@@ -200,7 +200,7 @@
     },
     "./perf_hooks": {
       "bun": "./ts/perf_hooks.ts",
-      "deno": "./jsr/perf_hooks.ts",
+      "deno": "./npm/perf_hooks.js",
       "types": "./ts/perf_hooks.d.ts",
       "default": "./js/perf_hooks.js",
       "import": "./js/perf_hooks.mjs",
@@ -208,7 +208,7 @@
     },
     "./process": {
       "bun": "./ts/process.ts",
-      "deno": "./jsr/process.ts",
+      "deno": "./npm/process.js",
       "types": "./ts/process.d.ts",
       "default": "./js/process.js",
       "import": "./js/process.mjs",
@@ -216,7 +216,7 @@
     },
     "./punycode": {
       "bun": "./ts/punycode.ts",
-      "deno": "./jsr/punycode.ts",
+      "deno": "./npm/punycode.js",
       "types": "./ts/punycode.d.ts",
       "default": "./js/punycode.js",
       "import": "./js/punycode.mjs",
@@ -224,7 +224,7 @@
     },
     "./querystring": {
       "bun": "./ts/querystring.ts",
-      "deno": "./jsr/querystring.ts",
+      "deno": "./npm/querystring.js",
       "types": "./ts/querystring.d.ts",
       "default": "./js/querystring.js",
       "import": "./js/querystring.mjs",
@@ -232,7 +232,7 @@
     },
     "./readline": {
       "bun": "./ts/readline.ts",
-      "deno": "./jsr/readline.ts",
+      "deno": "./npm/readline.js",
       "types": "./ts/readline.d.ts",
       "default": "./js/readline.js",
       "import": "./js/readline.mjs",
@@ -240,7 +240,7 @@
     },
     "./stream": {
       "bun": "./ts/stream.ts",
-      "deno": "./jsr/stream.ts",
+      "deno": "./npm/stream.js",
       "types": "./ts/stream.d.ts",
       "default": "./js/stream.js",
       "import": "./js/stream.mjs",
@@ -248,7 +248,7 @@
     },
     "./string_decoder": {
       "bun": "./ts/string_decoder.ts",
-      "deno": "./jsr/string_decoder.ts",
+      "deno": "./npm/string_decoder.js",
       "types": "./ts/string_decoder.d.ts",
       "default": "./js/string_decoder.js",
       "import": "./js/string_decoder.mjs",
@@ -256,7 +256,7 @@
     },
     "./timers": {
       "bun": "./ts/timers.ts",
-      "deno": "./jsr/timers.ts",
+      "deno": "./npm/timers.js",
       "types": "./ts/timers.d.ts",
       "default": "./js/timers.js",
       "import": "./js/timers.mjs",
@@ -264,7 +264,7 @@
     },
     "./tls": {
       "bun": "./ts/tls.ts",
-      "deno": "./jsr/tls.ts",
+      "deno": "./npm/tls.js",
       "types": "./ts/tls.d.ts",
       "default": "./js/tls.js",
       "import": "./js/tls.mjs",
@@ -272,7 +272,7 @@
     },
     "./tty": {
       "bun": "./ts/tty.ts",
-      "deno": "./jsr/tty.ts",
+      "deno": "./npm/tty.js",
       "types": "./ts/tty.d.ts",
       "default": "./js/tty.js",
       "import": "./js/tty.mjs",
@@ -280,7 +280,7 @@
     },
     "./url": {
       "bun": "./ts/url.ts",
-      "deno": "./jsr/url.ts",
+      "deno": "./npm/url.js",
       "types": "./ts/url.d.ts",
       "default": "./js/url.js",
       "import": "./js/url.mjs",
@@ -288,7 +288,7 @@
     },
     "./util": {
       "bun": "./ts/util.ts",
-      "deno": "./jsr/util.ts",
+      "deno": "./npm/util.js",
       "types": "./ts/util.d.ts",
       "default": "./js/util.js",
       "import": "./js/util.mjs",
@@ -296,7 +296,7 @@
     },
     "./vm": {
       "bun": "./ts/vm.ts",
-      "deno": "./jsr/vm.ts",
+      "deno": "./npm/vm.js",
       "types": "./ts/vm.d.ts",
       "default": "./js/vm.js",
       "import": "./js/vm.mjs",
@@ -304,7 +304,7 @@
     },
     "./worker_threads": {
       "bun": "./ts/worker_threads.ts",
-      "deno": "./jsr/worker_threads.ts",
+      "deno": "./npm/worker_threads.js",
       "types": "./ts/worker_threads.d.ts",
       "default": "./js/worker_threads.js",
       "import": "./js/worker_threads.mjs",
@@ -312,7 +312,7 @@
     },
     "./zlib": {
       "bun": "./ts/zlib.ts",
-      "deno": "./jsr/zlib.ts",
+      "deno": "./npm/zlib.js",
       "types": "./ts/zlib.d.ts",
       "default": "./js/zlib.js",
       "import": "./js/zlib.mjs",
