--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Build
-/ts/
-/js/
-/npm/
+/deno/
+/node/
 /tmp/
 
 # Logs
